--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Helvetica', Verdana;
     box-sizing: border-box;
+
 }
 html{
     scroll-behavior: smooth;
@@ -14,24 +15,31 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(IMAGES/qqqq.png);
+    background-image: url(IMAGES/eeee.png);
     background-size: cover;
-    background-position: center;
+    background-position: 20%;
     background-attachment: fixed;
+    font-size: x-large;
+    
 }
 .container{
     padding: 10px 10%;
 }
 
 nav{
+    margin-top:-105px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+
 }
 
 .logo{
-    width: 140px;
+    position: relative;
+    right: 60px;
+    top: 15px;
+    width: 20vw;
 }
 
 nav ul li{
@@ -43,14 +51,16 @@ nav ul li{
 nav ul li a{
     color: #fff;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 21px;
+    font-weight: bold;
+    
     position: relative;
 }
 nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #ce8628;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -68,7 +78,7 @@ nav ul li a:hover::after{
     margin-top: 20px;
 }
 .header-text h1 span{
-    color: #ff004f;
+    color: #ce8628;
 }
 /* -----------about--------------- */
 #about{
@@ -94,6 +104,7 @@ nav ul li a:hover::after{
 }
 
 .sub-title{
+    margin-bottom: 20px;
     font-size: 60px;
     font-weight: 600;
     color: #fff;
@@ -114,7 +125,7 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #ce8628;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -130,7 +141,7 @@ nav ul li a:hover::after{
     margin: 10px 0;
 }
 .tab-contents ul li span{
-    color: #b54769;
+    color: #d1a367;
     font-size: 14px;
 }
 .tab-contents{
@@ -175,7 +186,7 @@ nav ul li a:hover::after{
     display: inline-block;
 }
 .services-list div:hover{
-    background: #ff004f;
+    background: #ce8628;
     transform: translateY(-10px);
 }
 /* -------portfolio----------- */
@@ -202,7 +213,7 @@ nav ul li a:hover::after{
 .layer{
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0,0,0,0.6), #ff004f);
+    background: linear-gradient(rgba(0,0,0,0.6), #ce8628);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -223,7 +234,7 @@ nav ul li a:hover::after{
 }
 .layer a{
     margin-top: 20px;
-    color: #ff004f;
+    color: #ce8628;
     text-decoration: none;
     font-size: 18px;
     line-height: 60px;
@@ -243,7 +254,7 @@ nav ul li a:hover::after{
     display: block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid #ff004f;
+    border: 1px solid #ce8628;
     padding: 14px 50px;
     border-radius: 6px;
     text-decoration: none;
@@ -251,7 +262,7 @@ nav ul li a:hover::after{
     transition: background 0.5s;
 }
 .btn:hover{
-    background: #ff004f;
+    background: #ce8628;
 }
 
 /* ---------contact-------- */
@@ -265,7 +276,7 @@ nav ul li a:hover::after{
     margin-top: 30px;
 }
 .contact-left p i{
-    color: #ff004f;
+    color: #ce8628;
     margin-right: 15px;
     font-size: 25px;
 }
@@ -281,12 +292,12 @@ nav ul li a:hover::after{
     transition: transform 0.5s;
 }
 .social-icons a:hover{
-    color: #ff004f;
+    color: #ce8628;
     transform: translateY(-5px);
 }
 .btn.btn2{
     display: inline-block;
-    background: #ff004f;
+    background: #ce8628;
 }
 .contact-right form{
     width: 100%;
@@ -317,10 +328,10 @@ form .btn2{
     margin-top: 20px;
 }
 .copyright i{
-    color: #ff004f;
+    color: #ce8628;
 }
 .copyright a{
-    color: #ff004f;
+    color: #ce8628;
     text-decoration: none;
 }
 /* -----------------css for small screens--------- */
@@ -344,7 +355,7 @@ nav .fas{
         font-size: 25px;
     }
     nav ul{
-        background: #ff004f;
+        background: #ce8628;
         position: fixed;
         top: 0;
         right: -200px;
@@ -388,7 +399,7 @@ nav .fas{
     }
 }
 #msg{
-    color: #61b752;
+    color: #ce8628;
     margin-top: -40px;
     display: block;
 }
